# naive-http

./: .gitignore  CMakeLists.txt  a.out  client.ipynb  client.py  error_handler.c  error_handler.h  http.c  http.h  lock.c  main.c  misc.h  rio.c  rio.h  socket_util.c  socket_util.h  transaction.c  transaction.h
test/: copy_txt.c
